# orange_chat

./: Cargo.toml  README.md
src/: main.rs
static/: index.html  login.html
static/css/: main.css  normalize.css
static/js/: chat_window.js
templates/: login.html.tera  message.html
