[package]
name = "orange_chat"
version = "0.1.0"
authors = ["George Sanger <paperclipstudio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1", features=["json"]}
tera = "1"
serde = "*"


[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
